style:[S2] add relative_layout1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Contraint and Relative Layout</string>
+    <string name="example_bold"><b>Jenis cuci baju</b></string>
 </resources>
